# docker_images

./: .gitignore
dbt_postgres_project/: .gitignore  dbt_project.yml  docker-compose.yml  profiles.yml  readme.md
dbt_postgres_project/models/ventas/: ventas_mexico_limpias.sql
dbt_postgres_project/seeds/: ventas_brutas.csv
kafka_spark_project/: docker-compose.yml  readme.md
kafka_spark_project/files/: processor.py  producer.py
postgres/: compose.yaml  ejercicio1.md  ejercicio2.md  ejercicio3.md  ejercicio4.md  ejercicio5.md  ejercicio6.md  ejercicio7.md  ejercicio8.md  rep.md  run.sh  tables.md
rust_environment/: docker-compose.yaml  readme.md
rust_environment/files/controlFlujo/: main.rs
rust_environment/files/inventario_exercise/: Cargo.toml
rust_environment/files/ownership1/: main  main.rs
rust_environment/files/ownership2/: main  main.rs
rust_environment/files/primer_codigo/: main  main.rs
rust_environment/files/proyecto_cargo/: Cargo.toml
rust_environment/files/pruebas/: main  main.rs
rust_environment/files/rusty_do/: Cargo.toml
rust_environment/files/rusty_do_pulido/: Cargo.toml
rust_environment/files/rusty_weather/: Cargo.toml
rust_environment/files/rusty_weather/src/: main.rs
spark_jupyter/: Dockerfile  EjerciciosSpark.md  compose.yaml  run.sh
spark_jupyter/ejercicios_etl/: optimized_script.py  requirements.txt  script_project2.py
spark_minio/: compose.yaml  run.sh
spark_minio/notebooks/: pyspark_minio_test.ipynb
ubuntu_go/: Dockerfile  compose.yaml
ubuntu_go_node/: Dockerfile
ubuntu_python/: Dockerfile  compose.yaml
(+6 files in other folders)
