[package]
name = "rusty_weather"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] } # Para hacer peticiones web
tokio = { version = "1", features = ["full"] }      # El motor para ejecutar código asíncrono
dotenvy = "0.15"